added test resources